Bug 154991 - CRASH: hiding column
Summary: CRASH: hiding column
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: high major
Assignee: Heiko Tietze
URL:
Whiteboard: target:7.6.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Crash
  Show dependency treegraph
 
Reported: 2023-04-24 18:58 UTC by Xisco Faulí
Modified: 2023-04-25 11:03 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-04-24 18:58:58 UTC
Steps to reproduce:
1. Open attachment 55639 [details] from bug 44831
2. Go to sheet "Рассчёт Янв 12г"
3. Right Click on Column B - Hide column

Crash

reproduced in

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a1388417b217430de456868c440817459697c4a8
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2023-04-24 18:59:48 UTC
Regression introduced by:

author	Heiko Tietze <tietze.heiko@gmail.com>	2023-04-13 12:15:46 +0200
committer	Heiko Tietze <heiko.tietze@documentfoundation.org>	2023-04-14 11:39:06 +0200
commit 11bb9c14da13507adeeea8dce863fb4b96a92870 (patch)
tree 77731313a7a4630a807a55393d7132e9dda512c3
parent b9ad48f1939145105ee57470b5c9210bacc8ee45 (diff)
[API CHANGE] Related tdf#154080 - Allow customization of comment indicator color

Bisected with: bibisect-linux64-7.6

Adding Cc: to Heiko Tietze
Comment 2 Commit Notification 2023-04-25 09:22:11 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1f7b725b55328f961fc9f124f22e3537e3cfed94

Resolves tdf#154991 - Fix crash with hidden columns

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2023-04-25 11:03:22 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3fa2ba3b557f2415f94cc22cc4b3495d9226df72

tdf#154991: sc_uicalc: Add unittest

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.