Resolves tdf#154991 - Fix crash with hidden columns

Hidden columns do not have a background that can be taken
into account for the text overflow indicator's frame

Change-Id: I325873aede07fd890777624308a3f5a41f0f1795
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150959
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>